Horizon new launch instance form
    A new launch instance form in a pure angular development
    Here are the enhancement:
        - better use of less and bootstrap
(part of https://blueprints.launchpad.net/horizon/+spec/css-breakdown)
        - use of a centralized list of variable.
It makes css customization easier, improve maintainability and reduce
code footprint. (part of
https://blueprints.launchpad.net/horizon/+spec/centralized-color-palette)
        - use of angular for all the heavy lift client side (part of
https://blueprints.launchpad.net/horizon/+spec/horizon-angular)
        - reduce the use of class based view put the displaying logic
on client side and only handle datas on server side.

    TODO list:
        - provide some tests for the client side
        - split this commit in one for each blueprint

Implements: blueprint launch-instance-ux-enhancement

Change-Id: Ie0d5b33c0919c7378eae30ad51dcd2f8d297861a

--- a/horizon/conf/dash_template/templates/dash_name/base.html
+++ b/horizon/conf/dash_template/templates/dash_name/base.html
@@ -1,7 +1,7 @@
 {% load horizon %}{% jstemplate %}[% extends 'base.html' %]
 
 [% block sidebar %]
-  [% include 'horizon/common/_sidebar.html' %]
+  [% include 'horizon/_sidebar.html' %]
 [% endblock %]
 
 [% block main %]
