--- a/horizon/templates/horizon/_messages.html
+++ b/horizon/templates/horizon/_messages.html
@@ -1,29 +1,17 @@
 {% load i18n %}
+{% load horizon %}
 <div class="messages">
-{% for message in messages %}
-  {% if "info" in message.tags %}
-    <div class="alert alert-block alert-info fade in">
-      <a class="close" data-dismiss="alert" href="#">&times;</a>
-      <p><strong>{% trans "Info: " %}</strong>{{ message }}</p>
-    </div>
-  {% endif %}
-  {% if "warning" in message.tags %}
-    <div class="alert alert-block alert-warning fade in">
-      <a class="close" data-dismiss="alert" href="#">&times;</a>
-      <p><strong>{% trans "Warning: " %}</strong>{{ message }}</p>
-    </div>
-  {% endif %}
-  {% if "success" in message.tags %}
-    <div class="alert alert-block alert-success fade in">
-      <a class="close" data-dismiss="alert" href="#">&times;</a>
-      <p><strong>{% trans "Success: " %}</strong>{{ message }}</p>
-    </div>
-  {% endif %}
-  {% if "error" in message.tags %}
-    <div class="alert alert-block alert-error fade in">
-      <a class="close" data-dismiss="alert" href="#">&times;</a>
-      <p><strong>{% trans "Error: " %}</strong>{{ message }}</p>
-    </div>
-  {% endif %}
-{% endfor %}
+<div ng-controller="messagesCtrl" class="messages">
+  <alert ng-repeat="alert in alerts"
+         class="alert-block"
+         type="alert.type"
+         close="closeAlert($index)"
+         ng-cloak>
+    <p>
+      <strong ng-bind-html="alert.type_display"></strong>
+      <span ng-bind-html="alert.msg"></span>
+    </p>
+  </alert>
+</div>
+{% json_angular messages "messages-json"%}
 </div>
