--- a/horizon/templates/horizon/common/_region_selector.html
+++ b/horizon/templates/horizon/common/_region_selector.html
@@ -1,16 +1,14 @@
 {% load url from future %}
 {% if regions.support %}
-  <div id="region_switcher" class="dropdown switcher_bar" tabindex='1'>
-    <a class="dropdown-toggle" data-toggle="dropdown" href="#region_switcher">
-      {{ regions.current.name }}
-      </a>
+  <li class="dropdown">
+    <a class="dropdown-toggle">{{ regions.current.name }}</a>
+
     <ul id="region_list" class="dropdown-menu">
-      <li class='divider'></li>
       {% for region in regions.available %}
         {% if region.name != regions.current.name %}
-          <li><a class="ajax-modal" href="{% url 'login' %}?region={{ region.endpoint|urlencode }}">{{ region.name }}</a></li>
+          <li><a href="{% url 'login' %}?region={{ region.endpoint|urlencode }}">{{ region.name }}</a></li>
         {% endif %}
       {% endfor %}
     </ul>
-  </div>
+  </li>
 {% endif %}
