--- a/horizon/test/test_dashboards/dogs/templates/dogs/base.html
+++ b/horizon/test/test_dashboards/dogs/templates/dogs/base.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block sidebar %}
-  {% include 'horizon/common/_sidebar.html' %}
+  {% include 'horizon/_sidebar.html' %}
 {% endblock %}
 
 {% block main %}
