--- a/openstack_dashboard/dashboards/project/instances/templates/instances/index.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/index.html
@@ -7,5 +7,9 @@
 {% endblock page_header %}
 
 {% block main %}
-  {{ table.render }}
+  <div ng-controller="InstancesCtrl">
+    {{ table.render }}
+  </div>
+
+
 {% endblock %}
