--- a/openstack_dashboard/dashboards/project/network_topology/templates/network_topology/index.html
+++ b/openstack_dashboard/dashboards/project/network_topology/templates/network_topology/index.html
@@ -17,6 +17,8 @@
 {% include "project/network_topology/client_side/_balloon_device.html" %}
 {% include "project/network_topology/client_side/_balloon_port.html" %}
 
+
+<div ng-controller="networkTopologyCtrl">
 <div class="topologyNavi">
   <div class="toggleView btn-group" data-toggle="buttons-radio">
     <button type="button" class="btn small" data-value="small"><i class="icon-th"></i>{%trans "Small" %}</button>
@@ -24,7 +26,7 @@
   </div>
   
   <div class="launchButtons">
-  <a href="{% url 'horizon:project:network_topology:launchinstance' %}" id="instances__action_launch" class="btn btn-small btn-launch ajax-modal">{%trans "Launch Instance" %}</a>
+  <a href="#" id="instances__action_launch" class="btn btn-small btn-launch" ng-click="launch()">{%trans "Launch Instance" %}</a>
   <a href="{% url 'horizon:project:network_topology:createnetwork' %}" id="networks__action_create" class="btn btn-small ajax-modal btn-create">{%trans "Create Network" %}</a>
   <a href="{% url 'horizon:project:network_topology:createrouter' %}" id="Routers__action_create" class="btn btn-small ajax-modal btn-create">{%trans "Create Router" %}</a>
   </div>
@@ -46,4 +48,5 @@
     });
   }
 </script>
+</div>
 {% endblock %}
