--- a/horizon/templates/horizon/_conf.html
+++ b/horizon/templates/horizon/_conf.html
@@ -23,7 +23,8 @@ horizonApp
     hzConfig.auto_fade_alerts = {
       delay: {{ HORIZON_CONFIG.auto_fade_alerts.delay|default:"3000" }},
       fade_duration: {{ HORIZON_CONFIG.auto_fade_alerts.fade_duration|default:"1500" }},
-      types: {{ HORIZON_CONFIG.auto_fade_alerts.types|default:"[]"|safe }}
+      types: {{ HORIZON_CONFIG.auto_fade_alerts.types|default:"[]"|safe }},
+      default_type: 'info'
     };
 }]);
 
