--- a/horizon/templates/horizon/jasmine/jasmine.html
+++ b/horizon/templates/horizon/jasmine/jasmine.html
@@ -6,6 +6,7 @@
 
 <link rel="shortcut icon" type="image/png" href="">
   <link rel="stylesheet" type="text/css" href="">
+  <script type="text/javascript" src="{% url 'horizon:jsi18n' 'horizon' %}"></script>
 
   <link rel="shortcut icon" type="image/png" href="{{ STATIC_URL }}horizon/lib/jasmine-1.3.1/jasmine.css">
   <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}horizon/lib/jasmine-1.3.1/jasmine.css">
