--- a/horizon/templates/horizon/jasmine/jasmine.html
+++ b/horizon/templates/horizon/jasmine/jasmine.html
@@ -16,6 +16,10 @@
 
   <script type="text/javascript" src="{{ STATIC_URL }}horizon/lib/angular/angular.js"></script>
   <script type="text/javascript" src="{{ STATIC_URL }}horizon/lib/angular/angular-mock.js"></script>
+
+  {% block scripts %}
+  {% endblock  %}
+
   {% for source in sources %}
     <script type="application/javascript" src="{{ STATIC_URL }}{{ source }}"></script>
   {% endfor %}
