--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -5,6 +5,7 @@
 @import "sprites.less";
 @import "sidebar.less";
 @import "topbar.less";
+@import "wizards.less";
 
 /* new clearfix */
 .clearfix:after {
@@ -789,17 +790,20 @@ form label {
 }
 
 .modal {
-    width: 700px;
-    max-height: none; /* Prevents large modals from scrolling unnecessarily */
-    top: 80px;
-    margin-top: 0;
-    position: absolute;
-}
+  width: 700px;
+  max-height: none; /* Prevents large modals from scrolling unnecessarily */
+  top: 80px;
+  margin-top: 0;
+  position: absolute;
+  outline: none;
 
-.modal.fullscreen {
-  width: 90%;
-  margin: auto;
-  left: 5%;
+  &.fade.in { top: 80px; }
+
+  &.fullscreen {
+    width: 90%;
+    margin: auto;
+    left: 5%;
+  }
 }
 
 .modal.loading {
