Add template loading from html
Change-Id: I4eb68d1cfbbb12c0fb765bc1d941f2d72dfb55c8

--- a/openstack_dashboard/dashboards/project/instances/templates/instances/index.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/index.html
@@ -8,6 +8,28 @@
 
 {% block main %}
   <div ng-controller="InstancesCtrl">
-  {{ table.render }}
+    {{ table.render }}
+
+    <script type="text/ng-template" id="InstanceModal.html">
+      <div class="modal-header"><h3>I'm a modal!</h3></div>
+      <div class="modal-body">
+        <tabset class="wizard">
+          <tab>
+            <tab-heading>
+              <i class="glyphicon glyphicon-bell"></i> Alert!
+            </tab-heading>
+            <div style="height: 200px">
+            </div>
+          </tab>
+          <tab heading="Vertical 2">Vertical content 2</tab>
+        </tabset>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-primary" ng-click="ok()">OK</button>
+        <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+      </div>
+    </script>
   </div>
+
+
 {% endblock %}
