--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -5,6 +5,7 @@
 @import "sprites.less";
 @import "sidebar.less";
 @import "topbar.less";
+@import "navs.less";
 @import "wizards.less";
 
 /* new clearfix */
@@ -28,10 +29,6 @@
        url('/static/dashboard/fonts/Anivers_Regular-webfont.svg#webfont3JLVF59W') format('svg');
   font-weight: normal;
   font-style: normal;
-}
-
-a {
-  color: #43a1d6;
 }
 
 ul {
