--- a/openstack_dashboard/static/dashboard/less/topbar.less
+++ b/openstack_dashboard/static/dashboard/less/topbar.less
@@ -1,10 +1,10 @@
 .topbar {
-  background-color: @white;
+  background-color: @body-bg;
   margin: 0 25px 0 280px;
   padding-top: 10px;
 
   .nav > li > a {
-    color: @black;
+    color: @text-color;
     text-shadow: none;
     cursor: pointer;
     border-bottom: 1px solid;
@@ -16,7 +16,7 @@
 
   .dropdown.open .dropdown-toggle,
   .nav > li > a:hover {
-    color: @red;
+    color: @brand-primary;
     font-weight: bold;
     border-bottom: 3px solid;
   }
@@ -34,7 +34,7 @@
       padding-bottom: 5px;
 
       &:hover {
-        background-color: @red;
+        background-color: @brand-primary;
       }
     }
 
