--- a/openstack_dashboard/static/dashboard/less/wizards.less
+++ b/openstack_dashboard/static/dashboard/less/wizards.less
@@ -1,55 +1,54 @@
 .wizard {
-  @active-color: @white;
-  @active-background: @red;
-  @color: @black;
-  @background: #ddd;
+  @active-color: @body-bg;
+  @active-background: @brand-primary;
+  @color: @text-color;
+  @background: @gray-lighter;
 
   & > ul.nav-tabs {
 
     border: none;
-    background: #efefef;
+    background: @body-bg;
     padding: 0;
 
     li {
       position: relative;
       display: block;
 
-      a {
+      a, a:hover {
         border:none;
         border-radius: 0;
         background: @background;
+        font-weight: normal;
         color: @color;
-        padding: 0 15px 0 35px;
-        line-height: 40px;
+        padding: 8px 15px 8px 35px;
         min-width: 60px;
-        margin: 0;
       }
       &:first-child a {
         padding-left: 15px;
       }
       &:before {
         position: absolute;
-        top: 0;
-        right: -20px;
+        top: 2px;
+        right: -15px;
         z-index: 2;
-        border: 20px solid transparent;
+        border: 15px solid transparent;
         border-right: 0;
         border-left-color: @background;
         content:"";
       }
       &:after {
         position: absolute;
-        top: -2px;
-        right: -22px;
+        top: 0px;
+        right: -18px;
         z-index: 1;
-        border: 22px solid transparent;
+        border: 17px solid transparent;
         border-right: 0;
         border-left-color: #fff;
         content:"";
       }
 
       &.active:before {
-        border-left: 20px solid @active-background;
+        border-left: 15px solid @active-background;
       }
     }
 
@@ -58,6 +57,12 @@
       background: @active-background;
       color:#fff;
       border: none;
+      font-weight: normal;
     }
+  }
+
+  & > .tab-content {
+    border-width: 0;
+    margin: 0;
   }
 }
