Add horizon button specific style
Change-Id: I74f70d469f1b63d34c03ab691fe60a62fa7b163d

--- a/openstack_dashboard/static/dashboard/less/mixins.less
+++ b/openstack_dashboard/static/dashboard/less/mixins.less
@@ -5,3 +5,21 @@
        -o-transform-origin: @pos;
           transform-origin: @pos;
 }
+
+.button-variant(@text, @background, @border) {
+  color: @text;
+  background-color: @background;
+  .buttonBackground(@background, @background);
+  border-color: @border;
+
+  &:hover,
+  &:focus,
+  &:active,
+  &.active {
+    .transition(none);
+    background-position: 0 -30px;
+    color: @text;
+    background-color: darken(@background, 10%);
+        border-color: darken(@border, 12%);
+  }
+}
