--- a/openstack_dashboard/static/dashboard/less/variables.less
+++ b/openstack_dashboard/static/dashboard/less/variables.less
@@ -2,27 +2,21 @@
 /*       Horizon Colors
 /*---------------------------------------------------------------------------*/
 
-@gray-darker:            lighten(#000, 13.5%); // #222
-@gray-dark:              lighten(#000, 20%);   // #333
-@gray:                   lighten(#000, 33.5%); // #555
-@gray-light:             lighten(#000, 60%);   // #999
-@gray-lighter:           lighten(#000, 93.5%); // #eee
+@gray-darker:            #222;
+@gray-dark:              #333;
+@gray:                   #555;
+@gray-light:             #999;
+@gray-lighter:           #eee;
 
 @brand-primary:         #d9534f;
 @brand-success:         #5cb85c;
 @brand-info:            #5bc0de;
 @brand-warning:         #f0ad4e;
-@brand-danger:          darken(#d9534f, 10%);
+@brand-danger:          #c9302c;
 
 @body-bg:               #fff;
 //** Global text color on `<body>`.
 @text-color:            @gray-dark;
-
-//** Global textual link color.
-@link-color:            @brand-primary;
-//** Link hover color set via `darken()` function.
-@link-hover-color:      darken(@link-color, 15%);
-
 
 @horizonHeadings: @gray;
 
