--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -2,6 +2,7 @@
 @import "../../bootstrap/less/datepicker.less";
 @import "variables.less";
 @import "mixins.less";
+@import "buttons.less";
 @import "sprites.less";
 @import "sidebar.less";
 @import "topbar.less";
