--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -8,6 +8,7 @@
 @import "topbar.less";
 @import "navs.less";
 @import "wizards.less";
+@import "badges.less";
 
 /* new clearfix */
 .clearfix:after {
@@ -186,7 +187,7 @@ a.current_item:hover h3, a.current_item:hover h4 {
   padding: 0 0 0 1px;
 }
 
-.table-bordered {
+.datatable {
   border: none;
 }
 
@@ -198,37 +199,37 @@ a.current_item:hover h3, a.current_item:hover h4 {
   background-color: transparent;
   border: none;
 }
-.table-bordered tr.table_caption + tr th {
+.datatable tr.table_caption + tr th {
   border-top: 1px solid #ddd;
 }
-.table-bordered tr.table_caption + tr th:first-child,
-.table-bordered tr.table_caption + tr th.hide + th {
+.datatable tr.table_caption + tr th:first-child,
+.datatable tr.table_caption + tr th.hide + th {
   -moz-border-radius-topleft: 4px;
   -webkit-border-top-left-radius: 4px;
   border-top-left-radius: 4px;
   border-left: 1px solid #ddd;
 }
-.table-bordered tr.table_caption + tr th:last-child {
+.datatable tr.table_caption + tr th:last-child {
   -moz-border-radius-topright: 4px;
   -webkit-border-top-right-radius: 4px;
   border-top-right-radius: 4px;
   border-right: 1px solid #ddd;
 }
-.table-bordered tbody tr td:first-child,
-.table-bordered tfoot tr td:first-child {
+.datatable tbody tr td:first-child,
+.datatable tfoot tr td:first-child {
   border-left: 1px solid #ddd;
 }
-.table-bordered tbody tr td:last-child,
-.table-bordered tfoot tr td:last-child {
+.datatable tbody tr td:last-child,
+.datatable tfoot tr td:last-child {
   border-right: 1px solid #ddd;
 }
-.table-bordered tfoot tr td:first-child {
+.datatable tfoot tr td:first-child {
   border-bottom: 1px solid #ddd;
   -moz-border-radius-bottomleft: 4px;
   -webkit-border-bottom-left-radius: 4px;
   border-bottom-left-radius: 4px;
 }
-.table-bordered tfoot tr td:last-child {
+.datatable tfoot tr td:last-child {
   border-bottom: 1px solid #ddd;
   -moz-border-radius-bottomright: 4px;
   -webkit-border-bottom-right-radius: 4px;
@@ -798,9 +799,34 @@ form label {
   &.fade.in { top: 80px; }
 
   &.fullscreen {
+    & > .modal-header {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 30px;
+    }
+    & > .modal-body {
+      overflow-y: scroll;
+      max-height: 80%;
+      position: absolute;
+      top: 50px;
+      bottom: 65px;
+      left: 0;
+      right: 0;
+    }
+
+    & > .modal-footer {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 30px;
+    }
     width: 90%;
     margin: auto;
     left: 5%;
+    bottom: 80px;
   }
 }
 
@@ -2221,4 +2247,12 @@ label.log-length {
     }
   }
 
+}
+
+/* Fix for Bootstrap 2.0.1 on table bordered */
+.table-bordered {
+  border-left: 0;
+  td {
+    border-left: 1px solid #ddd;
+  }
 }
