--- a/openstack_dashboard/static/dashboard/less/variables.less
+++ b/openstack_dashboard/static/dashboard/less/variables.less
@@ -8,11 +8,11 @@
 @gray-light:             #999;
 @gray-lighter:           #eee;
 
-@brand-primary:         #d9534f;
+@brand-primary:         #428bca;
 @brand-success:         #5cb85c;
 @brand-info:            #5bc0de;
 @brand-warning:         #f0ad4e;
-@brand-danger:          #c9302c;
+@brand-danger:          #d9534f;
 
 @body-bg:               #fff;
 //** Global text color on `<body>`.
