--- a/openstack_dashboard/dashboards/project/instances/templates/instances/index.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/index.html
@@ -7,7 +7,7 @@
 {% endblock page_header %}
 
 {% block main %}
-  <div ng-controller="InstancesCtrl">
+  <div ng-controller="ModalLaunchInstanceCtrl">
     {{ table.render }}
   </div>
 
