--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_update_networks.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_update_networks.html
@@ -4,13 +4,14 @@
 <table class="table-fixed" id="networkListSortContainer">
   <tbody>
     <tr>
-      <td class="actions">
+      <td class="actions" draggable-network>
         <label id="selected_network_label">{% trans "Selected Networks" %}</label>
         <ul id="selected_network" class="networklist">
         </ul>
         <label>{% trans "Available networks" %}</label>
         <ul id="available_network" class="networklist">
         </ul>
+        {% include "horizon/common/_form_fields.html" %}
       </td>
       <td class="help_text">
           {% include "project/instances/_launch_network_help.html" %}
@@ -18,22 +19,6 @@
     </tr>
   </tbody>
 </table>
-
-<table class="table-fixed" id="networkListIdContainer">
-  <tbody>
-    <tr>
-      <td class="actions">
-          <div id="networkListId">
-            {% include "horizon/common/_form_fields.html" %}
-          </div>
-      </td>
-      <td class="help_text">
-          {{ step.get_help_text }}
-      </td>
-    </tr>
-  </tbody>
-</table>
-
 
 <script>
   if (typeof $ !== 'undefined') {
