--- a/openstack_dashboard/templates/workflow/_launch_boot_volume.html
+++ b/openstack_dashboard/templates/workflow/_launch_boot_volume.html
@@ -1,10 +1,10 @@
 {% load i18n %}
-<div step data-active="tabs[1].active" data-select="select(1)" data-disabled="tabs[1].disabled">
-  <div step-heading ng-class="{done: !tabs[1].active && tabs[1].valid}" class="heading" >
+<div step data-active="tabs.bootVolume.active" data-disabled="tabs.bootVolume.disabled" select="tabs.bootVolume.validation()">
+  <div step-heading ng-class="{done: !tabs.bootVolume.active && tabs.bootVolume.valid}" class="heading" >
     {% trans "Step 2" %} - {% trans "Boot Volume" %}
   </div>
 
-  <div ng-form="BootVolumeForm" class="row-fluid" ng-controller="BootVolumeCtrl">
+  <div ng-form="forms.BootVolumeForm" class="row-fluid" ng-controller="BootVolumeCtrl">
     <fieldset class="span8">
 
       <div class="control-group">
@@ -12,13 +12,13 @@
           <div class="span5" ng-class="{'error': BootVolumeForm.name.$invalid && !BootVolumeForm.name.$pristine}">
             <label for="device_name" ng-if="BootVolumeForm.name.$valid || BootVolumeForm.name.$pristine">{% trans "Device Name" %}</label>
             <label for="device_name" ng-if="BootVolumeForm.name.$invalid && !BootVolumeForm.name.$pristine">{% trans "Device Name required" %}</label>
-            <input id="device_name" class="span5" type="text" name="name" ng-model="launchInstance.device_name" maxlength="80" ng-required="!tabs[1].disabled">
+            <input id="device_name" class="span5" type="text" name="name" ng-model="launchInstance.device_name" maxlength="80" ng-required="!tabs.bootVolume.disabled">
           </div>
           <div class="span3" ng-class="{'error': BootVolumeForm.volume_size.$invalid && !BootVolumeForm.volume_size.$pristine}">
             <label for="volume_size" ng-if="BootVolumeForm.volume_size.$valid || BootVolumeForm.volume_size.$pristine">{% trans "Device Size (GB)" %}</label>
             <label for="volume_size" ng-if="BootVolumeForm.volume_size.$error.required">{% trans "Device Size required" %}</label>
             <label for="volume_size" ng-if="BootVolumeForm.volume_size.$error.min">{% trans "Device Size minimum is 1" %}</label>
-            <input id="volume_size" class="span3" type="number" name="volume_size" ng-model="launchInstance.volume_size" ng-required="!tabs[1].disabled" min="1" ng-disabled="launchInstance.source_type === 'volumes' || launchInstance.source_type === 'volumes_snapshot' ">
+            <input id="volume_size" class="span3" type="number" name="volume_size" ng-model="launchInstance.volume_size" ng-required="!tabs.bootVolume.disabled" min="1" ng-disabled="launchInstance.source_type === 'volumes' || launchInstance.source_type === 'volumes_snapshot' ">
           </div>
 
 
