--- a/openstack_dashboard/templates/workflow/launch.html
+++ b/openstack_dashboard/templates/workflow/launch.html
@@ -14,6 +14,6 @@
 
 <div class="modal-footer">
   <a class="btn btn-warning" ng-click="cancel()">{% trans "Cancel" %}</a>
-  <a class="btn btn-primary" ng-show="tabs[index].valid && index < tabs.length - 1" ng-click="next()">{% trans "Next" %} »</a>
+  <a class="btn btn-primary" ng-show="index < tabs.length - 1 && tabs[index + 1].validation()" ng-click="next()">{% trans "Next" %} »</a>
   <a class="btn btn-info span2" ng-show="LaunchInstanceForm.$valid || index === tabs.length - 1" ng-click="launch(LaunchInstanceForm)" ng-disabled="LaunchInstanceForm.$invalid">{% trans "Launch" %}</a>
 </div>
