--- a/openstack_dashboard/templates/workflow/_launch_boot_volume.html
+++ b/openstack_dashboard/templates/workflow/_launch_boot_volume.html
@@ -9,15 +9,15 @@
 
       <div class="control-group">
         <div class="row">
-          <div class="span5" ng-class="{'error': BootVolumeForm.name.$invalid && !BootVolumeForm.name.$pristine}">
-            <label for="device_name" ng-if="BootVolumeForm.name.$valid || BootVolumeForm.name.$pristine">{% trans "Device Name" %}</label>
-            <label for="device_name" ng-if="BootVolumeForm.name.$invalid && !BootVolumeForm.name.$pristine">{% trans "Device Name required" %}</label>
+          <div class="span5" ng-class="{'error': forms.BootVolumeForm.name.$invalid && !forms.BootVolumeForm.name.$pristine}">
+            <label for="device_name" ng-if="forms.BootVolumeForm.name.$valid || forms.BootVolumeForm.name.$pristine">{% trans "Device Name" %}</label>
+            <label for="device_name" ng-if="forms.BootVolumeForm.name.$invalid && !forms.BootVolumeForm.name.$pristine">{% trans "Device Name required" %}</label>
             <input id="device_name" class="span5" type="text" name="name" ng-model="launchInstance.device_name" maxlength="80" ng-required="!tabs.bootVolume.disabled">
           </div>
-          <div class="span3" ng-class="{'error': BootVolumeForm.volume_size.$invalid && !BootVolumeForm.volume_size.$pristine}">
-            <label for="volume_size" ng-if="BootVolumeForm.volume_size.$valid || BootVolumeForm.volume_size.$pristine">{% trans "Device Size (GB)" %}</label>
-            <label for="volume_size" ng-if="BootVolumeForm.volume_size.$error.required">{% trans "Device Size required" %}</label>
-            <label for="volume_size" ng-if="BootVolumeForm.volume_size.$error.min">{% trans "Device Size minimum is 1" %}</label>
+          <div class="span3" ng-class="{'error': forms.BootVolumeForm.volume_size.$invalid && !forms.BootVolumeForm.volume_size.$pristine}">
+            <label for="volume_size" ng-if="forms.BootVolumeForm.volume_size.$valid || forms.BootVolumeForm.volume_size.$pristine">{% trans "Device Size (GB)" %}</label>
+            <label for="volume_size" ng-if="forms.BootVolumeForm.volume_size.$error.required">{% trans "Device Size required" %}</label>
+            <label for="volume_size" ng-if="forms.BootVolumeForm.volume_size.$error.min">{% trans "Device Size minimum is 1" %}</label>
             <input id="volume_size" class="span3" type="number" name="volume_size" ng-model="launchInstance.volume_size" ng-required="!tabs.bootVolume.disabled" min="1" ng-disabled="launchInstance.source_type === 'volumes' || launchInstance.source_type === 'volumes_snapshot' ">
           </div>
 
@@ -31,7 +31,7 @@
       <div class="control-group">
         <div class="alert alert-warning"><strong>{% trans "Warning!" %}</strong>{% trans "By checking this option, the boot disk will act like an ephemeral disk when you terminate the instance: it will be deleted." %}</div>
       </div>
-      <a class="btn btn-primary pull-right" ng-disabled="!BootVolumeForm.$valid" ng-click="next()">{% trans "Choose Flavor" %} »</a>
+      <a class="btn btn-primary pull-right" ng-disabled="!forms.BootVolumeForm.$valid" ng-click="wizard.next()">{% trans "Choose Flavor" %} »</a>
 
     </fieldset>
     <div class="span4">
